kylin-music (1.1.0-42) v101; urgency=medium

  * [BUG]
  - #113142 【音乐】搜索框样式与主题不统一

  * 需求号： 无
  * 其他改动说明： 更改ppa 缺少svg模块导致的编译错误
  * 其他改动影响域：无

 -- yushuoqi <yushuoqi@kylinos.cn>  Wed, 20 Apr 2022 13:53:19 +0800

kylin-music (1.1.0-41) v101; urgency=medium

  * [BUG]
  - #115930 【设计】占位图替换

  * 需求号： 无
  * 其他改动说明： 无
  * 其他改动影响域：无

 -- yushuoqi <yushuoqi@kylinos.cn>  Tue, 19 Apr 2022 17:39:23 +0800

kylin-music (1.1.0-40) v101; urgency=medium

  * [BUG]
  - #114427, 音乐列表不为空，文管中选中多个音频文件，enter之后只能添加部分文件

  * 需求号： 无
  * 其他改动说明： 无
  * 其他改动影响域：无

 -- yushuoqi <yushuoqi@kylinos.cn>  Thu, 14 Apr 2022 16:24:35 +0800

kylin-music (1.1.0-39) v101; urgency=medium

  * [BUG]
  - 101813, 在侧边栏新建歌单，不识别&等特殊字符
  - 109390, 双击商用音乐CD中的音频文件，打开音乐但没有播放音频

 -- yushuoqi <yushuoqi@kylinos.cn>  Fri, 11 Mar 2022 13:52:10 +0800

kylin-music (1.1.0-38) v101; urgency=medium

  * [BUG]
  - 106740, 组合键F9（上一首）、F10暂停和F11下一周不可用

 -- yushuoqi <yushuoqi@kylinos.cn>  Thu, 03 Mar 2022 17:02:12 +0800

kylin-music (1.1.0-37) v101; urgency=medium

  * BUG号：
  - 103011, ctrl+Q无法关闭音乐程序

 -- yushuoqi <yushuoqi@kylinos.cn>  Thu, 24 Feb 2022 16:45:04 +0800

kylin-music (1.1.0-36) v101; urgency=medium

  * 其他改动说明：
  - 取消control文件依赖： Breaks: taglib,

 -- yushuoqi <yushuoqi@kylinos.cn>  Thu, 17 Feb 2022 17:28:45 +0800

kylin-music (1.1.0-35) v101; urgency=medium

  * BUG号：
   - 103646, 播放音乐进入S4，显示器黑屏后声音会继续播放1-2S

  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- yushuoqi <yushuoqi@kylinos.cn>  Thu, 10 Feb 2022 11:24:23 +0800

kylin-music (1.1.0-34) v101; urgency=medium

  * BUG号：
   - 89148 【内测】【声音】插3.5mm耳机的情况下；播放音乐；拔掉耳机“音乐”不暂停.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Tue, 21 Dec 2021 15:37:24 +0800

kylin-music (1.1.0-33) v101; urgency=medium

  * BUG号：
   - 83171 【音乐】【概率性】右键正在播放中的音乐“从歌单中删除”应用闪退且产生core文件，概率1/100.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Thu, 02 Dec 2021 16:47:47 +0800

kylin-music (1.1.0-32) v101; urgency=medium

  * BUG号：无.